--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
+# Секретный ключ для JWT токенов
+SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Supabase настройки (если используете)
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-anon-key
-TELEGRAM_BOT_TOKEN=your-bot-token
-TELEGRAM_BOT_USERNAME=your-bot-username
-SECRET_KEY=your-secret-key-change-this
+SUPABASE_KEY=your-supabase-anon-key
+
+# Redis
+REDIS_URL=redis://redis:6379
+
+# Frontend URL для CORS
 FRONTEND_URL=http://localhost:3000
-ENVIRONMENT=development
+
+ENVIRONMENT=production
