--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,11 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=http://localhost:8000/api
+        - VITE_TELEGRAM_BOT_USERNAME=DashBoardMetricksBot
     ports:
       - "3000:80"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api
     restart: unless-stopped
     networks:
       - telegram-dashboard
