--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,6 +4,20 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Явное указание MIME типов
+    types {
+        text/html                             html htm shtml;
+        text/css                              css;
+        text/javascript                       js;
+        application/javascript                js;
+        application/json                      json;
+        image/svg+xml                         svg svgz;
+        image/png                             png;
+        image/jpeg                            jpg jpeg;
+        image/gif                             gif;
+        image/x-icon                          ico;
+    }
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -15,8 +29,16 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Assets директория с правильными MIME типами
+    location /assets/ {
+        try_files $uri =404;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
