--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-# Секретный ключ для JWT токенов
-SECRET_KEY=your-super-secret-key-change-this-in-production
-
-# Supabase настройки (если используете)
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-supabase-anon-key
-
 # Redis
 REDIS_URL=redis://redis:6379
 
 # Frontend URL для CORS
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://127.0.0.1:80
 
 ENVIRONMENT=production
+
+
+TELEGRAM_BOT_TOKEN=8470982948:AAHrDkCYnDOqcdZb8GIt-1L50zsF_9UVPLc
+TELEGRAM_BOT_USERNAME=DashBoardMetricksBot
+
+SUPABASE_URL=https://owphiqcvmfaupycofbbk.supabase.co
+SUPABASE_KEY=sb_secret_ulpQma0ZHrpervcPPRCdhg_CXDbZ8iB
