--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "127.0.0.1:8000:8000"
     env_file:
       - .env
     environment:
       - ENVIRONMENT=production
+      - FRONTEND_URL=http://127.0.0.1
     restart: unless-stopped
     depends_on:
       - redis
@@ -20,10 +21,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=http://localhost:8000/api
+        - VITE_API_URL=http://127.0.0.1:8000/api
         - VITE_TELEGRAM_BOT_USERNAME=DashBoardMetricksBot
     ports:
-      - "3000:80"
+      - "127.0.0.1:80:80"
     restart: unless-stopped
     networks:
       - telegram-dashboard
