--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,9 +9,9 @@ COPY package*.json ./
 # Установка ВСЕХ зависимостей (production + dev для сборки)
 RUN npm ci
 
-# Копирование исходного кода и ассетов
+# Копирование исходного кода (без assets)
 COPY . .
-RUN mkdir -p /app/dist/assets
+RUN rm -rf /app/public/assets && mkdir -p /app/dist
 
 # Аргументы для сборки
 ARG VITE_API_URL=http://localhost:8000/api
@@ -27,6 +27,9 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
+# Создание директории для внешних ассетов
+RUN mkdir -p /usr/share/nginx/assets
+
 # Копирование собранного приложения из build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
@@ -35,6 +38,9 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Открытие порта
 EXPOSE 8080
+
+# Создание volume для ассетов
+VOLUME /usr/share/nginx/assets
 
 # Запуск nginx
 CMD ["nginx", "-g", "daemon off;"]
