--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -46,6 +46,7 @@ server {
 
     # Assets директория с правильными MIME типами
     location /assets/ {
+        alias /usr/share/nginx/assets/;
         try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
