--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,8 +1,14 @@
 # Dependencies
 node_modules/
+.npm/
+.pnpm/
+.yarn/
 
 # Testing
 coverage/
+__tests__/
+*.test.*
+*.spec.*
 
 # Production
 build/
@@ -10,17 +16,40 @@ dist/
 !tailwind.config.js
 !postcss.config.js
 
+# Development
+.git/
+.github/
+.gitignore
+*.md
+.editorconfig
+.eslintrc*
+.prettierrc*
+.env*
+.husky/
+
 # Misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+Thumbs.db
+*.log
+*.lock
+*.tmp
+*.temp
 
 # IDE
 .vscode/
 .idea/
+*.sublime-*
+*.swp
+*.swo
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+*.tsbuildinfo
