Вернул старый дизайн для декстопа

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,27 @@
 # Build stage
-FROM node:18-alpine AS build
+FROM node:18-alpine AS deps
 
 # Устанавливаем зависимости для более быстрой сборки
 RUN apk add --no-cache libc6-compat
 
 WORKDIR /app
 
-# Копирование файлов зависимостей
+# Копирование только файлов зависимостей
 COPY package*.json ./
 
-# Установка зависимостей с использованием cache mount
-RUN --mount=type=cache,target=/root/.npm \
-    npm install --prefer-offline --no-audit
+# Установка только production зависимостей
+RUN npm ci --only=production --prefer-offline --no-audit
 
-# Копирование исходного кода (без assets)
+# Build stage
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+# Копируем зависимости из предыдущего этапа
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Очищаем assets и создаем dist
 RUN rm -rf /app/public/assets && mkdir -p /app/dist
 
 # Аргументы для сборки
@@ -25,12 +32,15 @@ ARG VITE_TELEGRAM_BOT_USERNAME=DashBoardMetricksBot
 ENV VITE_API_URL=$VITE_API_URL \
     VITE_TELEGRAM_BOT_USERNAME=$VITE_TELEGRAM_BOT_USERNAME \
     NODE_ENV=production \
-    NODE_OPTIONS="--max-old-space-size=4096"
+    NODE_OPTIONS="--max-old-space-size=8192"
 
-# Сборка приложения с использованием cache mount для node_modules
-RUN --mount=type=cache,target=/root/.npm \
-    --mount=type=cache,target=/app/node_modules/.vite \
-    npm run build
+# Оптимизированная сборка
+ENV VITE_DISABLE_ESLINT=true \
+    BABEL_ENV=production \
+    GENERATE_SOURCEMAP=false
+
+# Сборка приложения с оптимизациями
+RUN npm run build -- --mode production
 
 # Production stage
 FROM nginx:alpine
