--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,7 @@ server {
         image/jpeg                            jpg jpeg;
         image/gif                             gif;
         image/x-icon                          ico;
+        image/webp                            webp;
     }
 
     # Gzip compression
@@ -53,7 +54,7 @@ server {
     }
 
     # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp)$ {
         try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
