--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -47,17 +47,24 @@ server {
 
     # Assets директория с правильными MIME типами
     location /assets/ {
-        alias /usr/share/nginx/assets/;
-        try_files $uri =404;
+        root /usr/share/nginx;  # используем root вместо alias
+        try_files $uri $uri/ =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        access_log off;  # отключаем логирование для статики
+        tcp_nodelay off; # оптимизация TCP
+        tcp_nopush on;   # оптимизация отправки файлов
     }
 
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp)$ {
+        root /usr/share/nginx/html;  # явно указываем root
         try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        access_log off;
+        tcp_nodelay off;
+        tcp_nopush on;
     }
 
     # Security headers
