--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,18 +5,11 @@ server {
     index index.html;
 
     # Явное указание MIME типов
+    include mime.types;  # включаем стандартные MIME типы
+    default_type application/octet-stream;  # для неизвестных типов
+
     types {
-        text/html                             html htm shtml;
-        text/css                              css;
-        text/javascript                       js;
-        application/javascript                js;
-        application/json                      json;
-        image/svg+xml                         svg svgz;
-        image/png                             png;
-        image/jpeg                            jpg jpeg;
-        image/gif                             gif;
-        image/x-icon                          ico;
-        image/webp                            webp;
+        image/webp                            webp;  # явно определяем WebP
     }
 
     # Gzip compression
@@ -47,13 +40,25 @@ server {
 
     # Assets директория с правильными MIME типами
     location /assets/ {
-        root /usr/share/nginx;  # используем root вместо alias
-        try_files $uri $uri/ =404;
+        alias /usr/share/nginx/assets/;  # возвращаем alias
+        try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
-        access_log off;  # отключаем логирование для статики
-        tcp_nodelay off; # оптимизация TCP
-        tcp_nopush on;   # оптимизация отправки файлов
+        add_header Content-Type image/webp;  # явно указываем тип для webp
+        access_log off;
+        tcp_nodelay off;
+        tcp_nopush on;
+        
+        # Правильная обработка расширений
+        location ~* \.webp$ {
+            add_header Content-Type image/webp;
+        }
+        location ~* \.png$ {
+            add_header Content-Type image/png;
+        }
+        location ~* \.jpe?g$ {
+            add_header Content-Type image/jpeg;
+        }
     }
 
     # Cache static assets
