--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,55 +1,11 @@
-# Dependencies
-node_modules/
-.npm/
-.pnpm/
-.yarn/
-
-# Testing
-coverage/
-__tests__/
-*.test.*
-*.spec.*
-
-# Production
-build/
-dist/
-!tailwind.config.js
-!postcss.config.js
-
-# Development
-.git/
-.github/
+node_modules
+dist
+.git
 .gitignore
-*.md
-.editorconfig
-.eslintrc*
-.prettierrc*
-.env*
-.husky/
-
-# Misc
-.DS_Store
-Thumbs.db
+README.md
 *.log
-*.lock
-*.tmp
-*.temp
-
-# IDE
-.vscode/
-.idea/
-*.sublime-*
-*.swp
-*.swo
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# Cache
-.cache/
-.eslintcache
-.stylelintcache
-*.tsbuildinfo
+.env
+.env.*
+coverage
+.vscode
+.idea
