--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# Основные зависимости
 fastapi>=0.104.0,<0.105.0
 uvicorn[standard]>=0.24.0,<0.25.0
 python-dotenv>=1.0.0
@@ -8,6 +9,9 @@ httpx>=0.24.0
 python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
 passlib[bcrypt]>=1.7.4
+
+# Тяжелые пакеты с бинарными зависимостями
+--extra-index-url https://pypi.org/simple
 pandas>=2.1.0,<3.0.0
 numpy>=1.24.0,<2.0.0
 python-dateutil>=2.8.0
