--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,9 +8,9 @@ services:
     env_file:
       - .env
     environment:
-      - ENVIRONMENT=development
-      - FRONTEND_URL=http://127.0.0.1
-      - CORS_ORIGINS=http://127.0.0.1,http://localhost
+      - ENVIRONMENT=production
+      - FRONTEND_URL=https://dshb.lemifar.ru
+      - CORS_ORIGINS=https://dshb.lemifar.ru
     restart: unless-stopped
     networks:
       - telegram-dashboard
@@ -20,10 +20,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=http://127.0.0.1:8000/api
+        - VITE_API_URL=https://dshb.lemifar.ru/api
         - VITE_TELEGRAM_BOT_USERNAME=DashBoardMetricksBot
     ports:
-      - "127.0.0.1:80:80"
+      - "127.0.0.1:8080:80"
     volumes:
       - ./frontend/public/assets:/usr/share/nginx/assets
     restart: unless-stopped
@@ -33,3 +33,4 @@ services:
 networks:
   telegram-dashboard:
     driver: bridge
+
