Облегчил docker образ

--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -9,3 +9,23 @@ README.md
 coverage
 .vscode
 .idea
+.DS_Store
+*.swp
+*.swo
+*~
+.cache
+.parcel-cache
+.next
+.nuxt
+.vuepress/dist
+.serverless
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
+.history
+*.tsbuildinfo
+.eslintcache
+.npm
+.yarn
+.pnpm-store
